Checkbox message view position change

--- a/Frontend/task.html
+++ b/Frontend/task.html
@@ -123,3 +123,4 @@
         <td> <span ng-bind="entry.date"></span></td>
     </tr>
 </table>
+<input id="check" type="checkbox"  ng-click="entry.status = 'completed'"/>
