UI design changes

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -8,8 +8,19 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body style="background-image: url('images/person-holding-fountain-pen-753695.jpg')">
+<body style="background-image: url('images/asfalt-dark.png')">
+    
+    <h1 align=center style="font-size:40px"><img src="images/classic-close-up-fountain-pen-ink-261450.jpg" width="50" height="50"> Todo Task Manager</h1>
+    <div class="nav">
+    <ul>
+        <li><a href="#/">Home</a></li>
+        <li><a href="#/new">New</a></li>
+        <li><a href="#/inProgress">In Progress</a></li>
+        <li><a href="#/completed">Completed</a></li>
+    </ul>
+    </div>
     <ng-view></ng-view>
+    
 
 
     <script src="scripts/angular.js"></script>
