--- a/Frontend/task.html
+++ b/Frontend/task.html
@@ -1,6 +1,3 @@
-<h1>Task Locker</h1>
-<hr>
-
 <form ng-submit="add()">
     <select ng-model="label">
         <option value="" disabled selected hidden>Select Label</option>
@@ -16,29 +13,28 @@
 
 
 
-
-<h2>New Tasks</h2>
+<h2 style="color: black;">New Tasks</h2>
 <table id="tasks">
     <tr id="new">
         <th>Label</th>
         <th>Task Description</th>
         <th>Deadline</th>
     </tr>
-    <tr ng-repeat="entry in taskArray | filter:entry.status='new'"">
-            <td> <select ng-model="entry.label">
-        <option value="" disabled selected hidden>Select Label</option>
-        <option value="personal">Personal</option>
-        <option value="shopping">Shopping</option>
-        <option value="work">Work</option>
-        <option value="others">Others</option>
-        </select></td>
+    <tr ng-repeat="entry in taskArray | filter: {status:'new'}">
+        <td> <select ng-model="entry.label" ng-change="update(entry,'new')">
+                <!-- <option value="" disabled selected hidden>Select Label</option> -->
+                <option value="personal">Personal</option>
+                <option value="shopping">Shopping</option>
+                <option value="work">Work</option>
+                <option value="others">Others</option>
+            </select></td>
         <td>
-            <div class="tooltip"><input type="checkbox" ng-click="update(entry)" />
+            <div class="tooltip"><input type="checkbox" ng-click="update(entry,'completed')" />
                 <span class="tooltiptext">Task Completed!</span>
             </div>
             <span ng-bind="entry.task"></span>
         </td>
-        <td> <button class='button' ng-click="update(entry)"> <span ng-bind="entry.date"></span>
+        <td> <button class='button' ng-click="update(entry,'inProgress')"> <span ng-bind="entry.date"></span>
             </button></td>
     </tr>
 </table>
@@ -50,32 +46,16 @@
         <th>Task Description</th>
         <th>Deadline</th>
     </tr>
-    <tr ng-repeat="entry in taskArray | filter:entry.status='inProgress'"">
-                <td> <select ng-model=" entry.label">
-        <option value="" disabled selected hidden>Select Label</option>
-        <option value="personal">Personal</option>
-        <option value="shopping">Shopping</option>
-        <option value="work">Work</option>
-        <option value="others">Others</option>
-        </select></td>
+    <tr ng-repeat="entry in taskArray | filter:{status:'inProgress'}">
+        <td> <select ng-model=" entry.label" ng-change="update(entry,'inProgress')">
+                <!-- <option value="" disabled selected hidden>Select Label</option> -->
+                <option value="personal">Personal</option>
+                <option value="shopping">Shopping</option>
+                <option value="work">Work</option>
+                <option value="others">Others</option>
+            </select></td>
         <td> <span ng-bind="entry.task"></span> </span></td>
-        <td> <button class='button2' ng-click="update(entry)"> <span ng-bind="entry.date"></span></button>
+        <td> <button class='button2' ng-click="update(entry,'completed')"> <span ng-bind="entry.date"></span></button>
         </td>
-    </tr>
-</table>
-
-
-
-<h2 style="color: green;">Completed Tasks</h2>
-<table id="tasks">
-    <tr id='completed'>
-        <th>Label</th>
-        <th>Task Description</th>
-        <th>Deadline</th>
-    </tr>
-    <tr ng-repeat="entry in taskArray | filter:entry.status='completed'"">
-        <td> <span ng-bind=" entry.label"></span></td>
-        <td> <span ng-bind="entry.task"></span> </span></td>
-        <td> <span ng-bind="entry.date"></span></td>
     </tr>
 </table>
