--- a/Frontend/HTML/completedTask.html
+++ b/Frontend/HTML/completedTask.html
@@ -2,6 +2,7 @@
 <table id="tasks">
     <tr id='completed'>
         <th>Label</th>
+        <th>Status</th>
         <th>Task Description</th>
         <th>Deadline</th>
     </tr>
